Your commit message

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
 body {
   margin: 0;
+  padding: 0%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.App{
+  background: linear-gradient(
+    106.37deg,
+    #ffe1bc 29.63%,
+    #ffcfd1 51.55%,
+    #f3c6f1 90.85%
+  );
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.AppGlass{
+  height: 97%;
+  width: 97%;
+  display: grid;
+  background-color: rgb(247, 247, 241);
+  border-radius: 2rem;
+  overflow: hidden;
+  grid-template-columns: 11rem auto 20rem;
+}
+@media screen and (max-width:1200px){
+   .AppGlass{
+    grid-template-columns: 10% 50% auto;
+    overflow-y: scroll;
+   }
+}
+@media screen and (max-width:768px){
+  .AppGlass{
+    grid-template-columns: 1fr;
+  }
+  .AppGlass ::-webkit-scrollbar{
+    display: none;
+  }
 }
